<resources>
    <string name="app_name">Chatandstreamingapp</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">SignIn</string>
    <string name="second_fragment_label">SignUp</string>
    <string name="home_fragment_label">Home</string>
    <string name="settings_fragment_label">Settings</string>


    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_role">User Type</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_verify_email">Verify Email</string>

    <string name="action_register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_meeting" translatable="false">MeetingActivity</string>
    <string name="join_meeting">Join Meeting</string>
    <string name="settings">Settings</string>
    <string name="language_pref" translatable="false">language</string>
    <string name="language_summary">Choose the app language</string>
    <string name="lang">Language</string>
    <string name="client">Client</string>
    <string name="restaurant">Restaurant</string>
    <string name="home_username">Username: %1$s</string>
    <string name="home_role">Role: %1$s</string>
    <string name="dialog_verification">Verification</string>
    <string name="dialog_verification_message_error">Please verify your email address</string>
    <string name="dialog_verification_message_instructions">Account created, Please verify your email</string>
    <string name="rol">Rol</string>


    <string-array name="role_array">
        <item>Client</item>
        <item>Restaurant</item>
    </string-array>
    <string-array name="language_array">
        <item>Español</item>
        <item>English</item>
    </string-array>
    <string-array name="language_array_values">
        <item>es</item>
        <item>en</item>
    </string-array>
    <string name="prompt_confirm_password">Confirm password</string>
</resources>