<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.example.chatandstreamingapp.ui.login.signin.SignInFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_RegisterFragment"
            app:destination="@id/RegisterFragment" />

        <action
            android:id="@+id/action_LoginFragment_to_HomeFragment"
            app:destination="@id/HomeFragment"
            app:popUpTo="@id/LoginFragment"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/RegisterFragment"
        android:name="com.example.chatandstreamingapp.ui.login.signup.SignUpFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_RegisterFragment_to_LoginFragment"
            app:destination="@id/LoginFragment"
            app:popUpTo="@id/RegisterFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.chatandstreamingapp.ui.home.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_LoginFragment"
            app:destination="@id/LoginFragment"
            app:popUpTo="@id/HomeFragment"
            app:popUpToInclusive="true"/>

        <action
            android:id="@+id/action_HomeFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.example.chatandstreamingapp.ui.preferences.SettingsFragment"
        android:label="@string/settings_fragment_label">
    </fragment>
</navigation>